--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   </head>
 
-  <body>
+  <body ng-app>
 	<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -48,7 +48,15 @@
     <div class="container">
 	
 		<!--墙主体部分。稍后会自动填充-->
-		<div class="row-fluid" id="main">
+		<div class="row-fluid" id="main" ng-controller="postsController">
+			<div class="simpleheader alert alert-info"  ng-repeat="post in posts">
+				 <a class="open">+</a>
+				 <a class="close">×</a>
+				 <div class="s_author">{{post.author}}</div>
+				 <div class="s_title">{{post.title}}</div>
+				 <div class="s_abstract">{{post.content}}</div>
+			
+			</div>
 		</div><!--end of main-->
     </div> <!--end of container -->
   
@@ -120,7 +128,7 @@
   </script><!--end of templates-->
   
 <script>
-$(function(){
+v1init = function(){
 	$(".close").on("click",function(){start();$(this).parents(".topic").slideUp("slow",function(){$(this).remove();});$(".topic").removeClass("unseen");});
 	$(".open").on("click",function(){
 		stop();
@@ -142,7 +150,10 @@ $(function(){
 		config.init_page = parseInt($("#page").val());
 		start();
 	});
-});
+};
+//$(v1init);
+
+
 </script>
 
 </body>
