--- a/index.html
+++ b/index.html
@@ -32,19 +32,22 @@
     </div><!-- end of navbar -->
 
 
-    <div class="container">
+    <div class="container" ng-controller="postsController">
 	
 		<!--墙主体部分。稍后会自动填充-->
-		<div class="row-fluid" id="main" ng-controller="postsController">
+		<div class="row-fluid" id="main">
 			<div class="simpleheader alert alert-info"  ng-repeat="post in postsShowing">
 				 <div class="s_author">{{post.author}}</div>
 				 <div class="s_title">{{post.title}}</div>
-				 <div class="s_abstract">{{post.content}}</div>
+				 <div class="s_abstract" >{{post.content}}</div>
 			
 			</div>
 		</div><!--end of main-->
+		<div id="status">
+			<button class="btn btn-danger btn-large shown"><i class="icon-backward"></i>{{postsShown.length}}</button>
+			<button class="btn btn-success btn-large toShow">{{postsToShow.length}}<i class="icon-forward"></i></button>
     </div> <!--end of container -->
-  
+
 
 </body>
 </html>
