计数器可以点了

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			</div>
 		</div><!--end of main-->
 		<div id="status">
-			<button class="btn btn-danger btn-large shown"><i class="icon-backward"></i>{{postsShown.length}}</button>
-			<button class="btn btn-success btn-large toShow">{{postsToShow.length}}<i class="icon-forward"></i></button>
+			<button class="btn btn-danger btn-large shown" ng-click="prev()"><i class="icon-backward"></i>{{postsShown.length}}</button>
+			<button class="btn btn-success btn-large toShow" ng-click="next()">{{postsToShow.length}}<i class="icon-forward"></i></button>
     </div> <!--end of container -->
 
 
