加了个自动手动的FLAG

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		</div><!--end of main-->
 		<div id="status">
 			<button class="btn btn-danger btn-large shown" ng-click="prev()"><i class="icon-backward"></i>{{postsShown.length}}</button>
+			<button class="btn btn-large" ng-click="toggleAuto()">{{auto}}</button>
 			<button class="btn btn-success btn-large toShow" ng-click="next()">{{postsToShow.length}}<i class="icon-forward"></i></button>
     </div> <!--end of container -->
 
