--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 		<p>最大帖号： M.<input type="text" ng-model="lastFileId" />.A</p>
 		<p>取帖开关： <button class="btn btn-primary" ng-click="toggleAjax_Flag()">{{ajaxFlag}}</button></p>
 		<p>帖子切换： <button class="btn" ng-click="toggleAuto()" id="mode">{{auto}}</button></p>
-		<p>清空： <button class="btn btn-danger" ng-click="postsShown = []">清空已读</button> <button class="btn btn-success" ng-click="postsToShow = []">清空未读</button></p>
+		<p>清空： <button class="btn btn-danger" ng-click="postsShown = []">清空已读</button>
+		<button class="btn btn-success" ng-click="postsToShow = []; untractedPosts = [];">清空未读</button></p>
 	  </div>
 	  <div class="modal-footer">
 		<button class="btn btn-primary" ng-click="opencloseSettings()">关闭</button>
