--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	
 		<!--墙主体部分。稍后会自动填充-->
 		<div class="row-fluid" id="main">
-			<div class="simpleheader alert alert-info"  ng-repeat="post in postsShowing">
+			<div class="simpleheader alert"  ng-repeat="post in postsShowing">
 				 <div class="s_author">{{post.author}}</div>
 				 <div class="s_title">{{post.title}}</div>
 				 <div class="s_abstract" >{{post.content}}</div>
